--- a/src/components/TeamMatches/index.css
+++ b/src/components/TeamMatches/index.css
@@ -42,6 +42,25 @@
   background-color: #da237b;
 }
 
+.blink {
+  align-self: flex-end;
+}
+
+.back {
+  border: 0px;
+  border-radius: 15px;
+  background-color: rgb(15, 224, 243);
+  color: #ffffff;
+  font-size: 22px;
+  font-family: 'Bree Serif';
+  cursor: pointer;
+  padding: 10px 15px 10px 15px;
+  align-self: flex-end;
+  width: 200px;
+  margin-bottom: 20px;
+  margin-right: 10px;
+}
+
 .tbi {
   height: 450px;
   max-width: 100%;
@@ -72,6 +91,11 @@
   .tbi {
     height: 270px;
   }
+
+  .back {
+    width: 100px;
+    font-size: 15px;
+  }
 }
 
 @media all and (min-width: 577px) and (max-width: 768px) {
@@ -84,7 +108,7 @@
   }
 }
 
-@media (max-width: 575px){
+@media (max-width: 575px) {
   .lm {
     font-size: 15px;
   }
